<resources>
    <string name="app_name">Books</string>
    <string name="Login">Login</string>
    <string name="Introduza_email">Introduza email</string>
    <string name="introduza_password">Introduza password</string>
    <string name="bem_vindo">Bem-vindo!</string>
    <string name="txt_livros_lista">Livros (Lista)</string>
    <string name="txt_livros_grelha">Livros (Grelha)</string>
    <string name="enviar_email">ENVIAR EMAIL</string>
    <string name="titulo">Título:</string>
    <string name="serie">Série:</string>
    <string name="Autor">Autor:</string>
    <string name="Ano">Ano:</string>
    <string name="txt_livro_dinamico">Livro Dinâmico</string>
    <string name="Email">Email</string>
    <string name="txt_comunicar">Comunicar</string>
    <string name="ndOpen">open</string>
    <string name="ndClose">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_detalhes">"Detalhes: "</string>
    <string name="txt_adicionar_livro">Adicionar Livro</string>
    <string name="txt_erro_titulo_invalido">Titulo invalido!</string>
    <string name="txt_erro_serie_invalida">Série inválida!</string>
    <string name="txt_erro_autor_invalido">Autor inválido!</string>
    <string name="txt_erro_ano_invalido">Ano inválido</string>
    <string name="txt_livro_adicionado_com_sucesso">Livro adicionado com sucesso.</string>
    <string name="txt_livro_modificado_com_sucesso">Livro modificado com sucesso.</string>
    <string name="txt_remover_livro">Remover Livro</string>
    <string name="txt_tem_a_certeza_que_pretende_remover_o_livro">Tem a certeza que pretende remover o livro?</string>
    <string name="txt_sim">Sim</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_nao_tem_internet">Não tem ligação a internet!</string>
    <string name="txt_erro_de_credenciais">Erro de credenciais</string>
</resources>